@@ -1,3 +1,9 @@
+2015-07-19 Frederik “Freso” S. Olesen <freso.dk@gmail.com>
+
+	* lwjgl-3.0.0a-1 :
+	Version bump.
+	See http://blog.lwjgl.org/lwjgl-3-0a-released/ for upstream changelog.
+
 2013-12-12 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
 
 	* lwjgl-2.9.1-1 :
